<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/backgrounds"
    tools:context=".Login">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:layout_marginTop="100dp"
        android:fontFamily="serif-monospace"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardBackgroundColor="#fff"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:id="@+id/alemail"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:background="#0000"
            android:drawableLeft="@drawable/email"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#fff"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:id="@+id/alpass"
            android:background="#0000"
            android:drawableLeft="@drawable/password"/>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingHorizontal="15dp"
        android:paddingTop="8dp" >

        <CheckBox
            android:id="@+id/s_h_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:text="@string/show_pwd"
            android:textColor="@color/white"
            android:textSize="14dp" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:id="@+id/lbtn"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textStyle="bold"
            android:textColor="#000"
            android:background="#556"
            android:id="@+id/albtn"
            android:gravity="center"
            />

    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/createAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/newUser"
        android:textColor="@color/white"
        android:textSize="15dp" />



</LinearLayout>



